fix(tooltip): card tooltips now have left alignment to match their non-tooltip visuals

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -83,9 +83,14 @@ img {
   --bs-tooltip-font-size: 1rem;
 }
 
-.tooltip-relic {
+.tooltip-relic,
+.tooltip-status-effect {
   --bs-tooltip-max-width: auto;
   --bs-tooltip-bg: transparent;
+
+  .tooltip-inner {
+    text-align: left;
+  }
 }
 
 .modal {
